plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
}


android {
    namespace 'com.team4099.hawkeye'
    compileSdk 32

    defaultConfig {
        applicationId 'com.team4099.hawkeye'
        minSdk 24
        minSdkVersion 24
        targetSdk 32
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug
        }
    }

    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.1.1'
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
    lintOptions {
        checkReleaseBuilds false
        disable 'UsingOnClickInXml'
    }

}

dependencies {

    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
    implementation 'androidx.activity:activity-compose:1.3.1'
    implementation "androidx.compose.ui:ui:$compose_version"
    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
    implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
    implementation 'androidx.camera:camera-core:1.1.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.lifecycle:lifecycle-common-java8:2.0.0'
    implementation 'de.javagl:obj:0.2.1'
    implementation 'com.google.android.material:material:1.1.0'

    // CameraX
    def camerax_version = "1.1.0"
    implementation "androidx.camera:camera-camera2:$camerax_version"
    implementation "androidx.camera:camera-lifecycle:$camerax_version"
    implementation "androidx.camera:camera-view:1.0.0-alpha27"

    // Icons
    implementation "androidx.compose.material:material-icons-extended:$compose_version"

    // ARcore
    implementation 'com.google.ar:core:1.33.0'

    // Add ntcore-java
    implementation "edu.wpi.first.ntcore:ntcore-java:2023.1.1-beta-3"

    // Add wpiutil-java
    implementation "edu.wpi.first.wpiutil:wpiutil-java:2023.1.1-beta-3"

    // Add ntcore-jni for runtime. We are adding all supported platforms
    // so that our application will work on all supported platforms.
//    implementation "edu.wpi.first.ntcore:ntcore-jni:VERSION:windowsx86"
//    implementation "edu.wpi.first.ntcore:ntcore-jni:VERSION:windowsx86-64"
//    implementation "edu.wpi.first.ntcore:ntcore-jni:VERSION:linuxx86-64"
//    implementation "edu.wpi.first.ntcore:ntcore-jni:VERSION:linuxraspbian"
//    implementation "edu.wpi.first.ntcore:ntcore-jni:2022.4.1:osxx86-64"
    implementation "edu.wpi.first.ntcore:ntcore-jni:2023.1.1-beta-3:linuxarm64"

}